<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragments.SumarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center|start"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/btn_back"
            android:src="@drawable/ic_back"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title_summary"
            android:textAlignment="center"
            android:textColor="@color/purple_app"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tittle_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/description"
                android:textColor="@color/purpleSecond_app"
                android:textSize="@dimen/sizeTittlesSummary" />

            <TextView
                android:id="@+id/tv_tittle_parcel_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:paddingStart="20dp"
                android:text="@string/parcelSummary"
                android:textColor="@color/purpleSecond_app"
                android:textSize="@dimen/sizeTittlesSummary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/white"
                android:textSize="@dimen/sizeValuesSummary"
                tools:text="2 Pacotes de acerola" />

            <TextView
                android:id="@+id/tv_number_parcel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:textSize="@dimen/sizeValuesSummary"
                tools:text="@string/seven_parcel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tittle_value_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/value_product"
                android:textColor="@color/purpleSecond_app"
                android:textSize="@dimen/sizeTittlesSummary" />

            <TextView
                android:id="@+id/tv_tittle_payment_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:paddingStart="20dp"
                android:text="@string/payment_method"
                android:textColor="@color/purpleSecond_app"
                android:textSize="@dimen/sizeTittlesSummary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/tv_value_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/white"
                android:textSize="@dimen/sizeValuesSummary"
                tools:text="R$ 0,00" />

            <TextView
                android:id="@+id/tv_payment_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:textSize="@dimen/sizeValuesSummary"
                tools:text="@string/credit" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>